k8s-cargo-ship/k8s-manifests/app/loadbalancer.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cargo-ship-lb
  namespace: cargo-ship-namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  selector:
    app: cargo-ship
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080
  type: LoadBalancer
